[feat] Implementar melhorias abrangentes de segurança no sistema HealPlus
- Adicionar SecurityHeadersConfig com headers X-XSS-Protection, X-Frame-Options, CSP, HSTS
- Implementar rate limiting diferenciado (auth: 10 req/min, geral: 100 req/min, uploads: 20 req/min)
- Criar InputSanitizer para prevenção de SQL Injection, XSS, Command Injection e Path Traversal
- Adicionar validação rigorosa em DTOs (AuthDtos, ChatDtos, GoogleAuthRequest)
- Ocultar senha do User em respostas JSON com @JsonIgnore
- Implementar verificação de propriedade em PatientsController e WoundsController
- Configurar headers de segurança no nginx.conf com rate limiting
- Adicionar CSP e security headers no frontend index.html
- Criar utilitários de segurança no frontend (security.js)
- Configurar OWASP Dependency Check para auditoria de dependências
- Atualizar application.yml com configurações seguras (H2 desabilitado, cookies seguros)
- Criar application-prod.yml com configurações de produção