@@ -16,6 +16,7 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.header.writers.XXssProtectionHeaderWriter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
@@ -30,14 +31,21 @@ public class SecurityConfig {
 
     @Value("${cors.origins:http://localhost:3000}")
     private String corsOrigins;
+    
+    @Value("${spring.profiles.active:default}")
+    private String activeProfile;
 
     private final JwtAuthFilter jwtAuthFilter;
     private final RateLimitFilter rateLimitFilter;
+    private final SecurityHeadersConfig securityHeadersConfig;
     private final OAuth2AuthenticationSuccessHandler oAuth2SuccessHandler;
     private final OAuth2AuthenticationFailureHandler oAuth2FailureHandler;
 
+    // Caminhos públicos - NUNCA expor console H2 em produção
     private static final List<String> PUBLIC_PATHS = List.of(
-        "/api/auth/**",
+        "/api/auth/login",
+        "/api/auth/register",
+        "/api/auth/google/**",
         "/actuator/health",
         "/actuator/info",
         "/swagger-ui/**",
@@ -45,21 +53,64 @@ public class SecurityConfig {
         "/api-docs/**",
         "/v3/api-docs/**",
         "/oauth2/**",
-        "/login/oauth2/**",
+        "/login/oauth2/**"
+    );
+    
+    // Caminhos apenas para desenvolvimento
+    private static final List<String> DEV_ONLY_PATHS = List.of(
         "/h2-console/**"
     );
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+        boolean isDev = "dev".equals(activeProfile) || "default".equals(activeProfile);
+        
         http
+            // CSRF - Desabilitado para APIs REST stateless com JWT
+            // Se houver endpoints baseados em cookies/sessão, habilitar CSRF
             .csrf(csrf -> csrf.disable())
-            .headers(headers -> headers.frameOptions(frame -> frame.disable()))
-            .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            
+            // Headers de segurança
+            .headers(headers -> headers
+                .xssProtection(xss -> xss
+                    .headerValue(XXssProtectionHeaderWriter.HeaderValue.ENABLED_MODE_BLOCK))
+                .frameOptions(frame -> {
+                    if (isDev) {
+                        frame.sameOrigin(); // Permite H2 console em dev
+                    } else {
+                        frame.deny(); // Bloqueia em produção
+                    }
+                })
+                .contentTypeOptions(contentType -> {})
+                .cacheControl(cache -> {})
+            )
+            
+            // Sessão stateless para JWT
+            .sessionManagement(sm -> sm
+                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                .sessionFixation().none()
+            )
+            
+            // Autorizações
             .authorizeHttpRequests(auth -> {
                 PUBLIC_PATHS.forEach(path -> auth.requestMatchers(path).permitAll());
+                
+                // Permitir H2 console apenas em dev
+                if (isDev) {
+                    DEV_ONLY_PATHS.forEach(path -> auth.requestMatchers(path).permitAll());
+                }
+                
                 auth.requestMatchers(HttpMethod.GET, "/").permitAll();
+                auth.requestMatchers(HttpMethod.OPTIONS, "/**").permitAll(); // CORS preflight
+                
+                // Endpoints admin apenas para ROLE_ADMIN
+                auth.requestMatchers("/api/admin/**").hasRole("ADMIN");
+                auth.requestMatchers("/actuator/**").hasRole("ADMIN");
+                
                 auth.anyRequest().authenticated();
             })
+            
+            // OAuth2
             .oauth2Login(oauth2 -> oauth2
                 .authorizationEndpoint(endpoint -> endpoint
                     .baseUri("/oauth2/authorize"))
@@ -68,6 +119,9 @@ public class SecurityConfig {
                 .successHandler(oAuth2SuccessHandler)
                 .failureHandler(oAuth2FailureHandler)
             )
+            
+            // Filtros customizados
+            .addFilterBefore(securityHeadersConfig, UsernamePasswordAuthenticationFilter.class)
             .addFilterBefore(rateLimitFilter, UsernamePasswordAuthenticationFilter.class)
             .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
@@ -76,6 +130,7 @@ public class SecurityConfig {
 
     @Bean
     public PasswordEncoder passwordEncoder() {
+        // BCrypt com fator de custo 12 (recomendado para produção)
         return new BCryptPasswordEncoder(12);
     }
 
@@ -83,10 +138,36 @@ public class SecurityConfig {
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(Arrays.asList(corsOrigins.split(",")));
-        config.setAllowedHeaders(List.of("*"));
+        
+        // Validar origens permitidas
+        List<String> origins = Arrays.asList(corsOrigins.split(","));
+        config.setAllowedOrigins(origins);
+        
+        // Headers permitidos - ser específico por segurança
+        config.setAllowedHeaders(List.of(
+            "Authorization",
+            "Content-Type",
+            "X-Requested-With",
+            "Accept",
+            "Origin",
+            "Access-Control-Request-Method",
+            "Access-Control-Request-Headers",
+            "X-CSRF-TOKEN"
+        ));
+        
+        // Métodos permitidos
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        config.setExposedHeaders(List.of("Authorization", "Content-Type"));
+        
+        // Headers expostos ao cliente
+        config.setExposedHeaders(List.of(
+            "Authorization",
+            "Content-Type",
+            "X-Total-Count",
+            "X-Page-Number",
+            "X-Page-Size"
+        ));
+        
+        // Cache preflight por 1 hora
         config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
